--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-
+    <link rel="icon" href="images/icon.ico">
     <title>Online Calculations</title>
 
     <!-- Material Design fonts -->
