--- a/index.html
+++ b/index.html
@@ -43,40 +43,32 @@
                 <div onclick="calcButton(4)" data-ripple-color="#ffffff" class="btn btn-num">4</div>
                 <div onclick="calcButton(1)" data-ripple-color="#ffffff" class="btn btn-num">1</div>
                 <div onclick="calcButton('period')" data-ripple-color="#ffffff" class="btn btn-nonnum">.</div>
+                <div onclick="calcButton(0)" data-ripple-color="#ffffff" class="btn btn-nonnum"><img src="images/sqrt.jpg" /></span>
+                </div>
             </div>
             <div class="">
                 <div onclick="calcButton(8)" data-ripple-color="#ffffff" class="btn btn-num">8</div>
                 <div onclick="calcButton(5)" data-ripple-color="#ffffff" class="btn btn-num">5</div>
                 <div onclick="calcButton(2)" data-ripple-color="#ffffff" class="btn btn-num">2</div>
                 <div onclick="calcButton(0)" data-ripple-color="#ffffff" class="btn btn-num">0</div>
+                <div onclick="calcButton('equal')" class="btn btn-nonnum">x<sup>2</sup></div>
             </div>
             <div class="">
                 <div onclick="calcButton(9)" data-ripple-color="#ffffff" class="btn btn-num">9</div>
                 <div onclick="calcButton(6)" data-ripple-color="#ffffff" class="btn btn-num">6</div>
                 <div onclick="calcButton(3)" data-ripple-color="#ffffff" class="btn btn-num">3</div>
-                <div onclick="calcButton('equal')" data-ripple-color="#ffffff" class="btn btn-nonnum">=</div>
+                <div onclick="calcButton('multiply')" data-ripple-color="#ffffff" class="btn btn-nonnum"><i class="material-icons">clear</i></div>
+                <div onclick="calcButton('divide')" data-ripple-color="#ffffff" class="btn btn-nonnum">&divide;</div>
             </div>
-            <div class="smaller">
+            <div class="">
                 <div onclick="calcButton('clear')" data-ripple-color="#ffffff" class="btn btn-nonnum">C</div>
+                <div onclick="calcButton('back')" data-ripple-color="#ffffff" class="btn btn-nonnum"><i class="material-icons">backspace</i></div>
                 <div onclick="calcButton('plus')" data-ripple-color="#ffffff" class="btn btn-nonnum">+</div>
                 <div onclick="calcButton('minus')" data-ripple-color="#ffffff" class="btn btn-nonnum">-</div>
-                <div onclick="calcButton('divide')" data-ripple-color="#ffffff" class="btn btn-nonnum">/</div>
-                <div onclick="calcButton('multiply')" data-ripple-color="#ffffff" class="btn btn-nonnum">
-                    <i style="font-size: inherit;" class="material-icons">clear</i>
-                </div>
+                <div onclick="calcButton('equal')" data-ripple-color="#ffffff" class="btn btn-nonnum">=</div>
             </div>
         </div>
         <div id="bottomButtons" class=""></div>
-
-
-        <!--<form class="bs-component">
-            <div class="form-group label-floating is-empty">
-                <label class="control-label" for="numberInput">Number</label>
-                <input class="form-control" id="numberInput" type="text">
-            </div>
-
-        </form>
-        <button class="btn btn-raised btn-block btn-primary btn-main" onclick="calculate();">Calculate</button><!---->
         <div class="well hidden" id="output"></div>
     </div>
 
