--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div onclick="calcButton(4)" data-ripple-color="#ffffff" class="btn btn-num">4</div>
                 <div onclick="calcButton(1)" data-ripple-color="#ffffff" class="btn btn-num">1</div>
                 <div onclick="calcButton('period')" data-ripple-color="#ffffff" class="btn btn-nonnum">.</div>
-                <div onclick="calcButton(0)" data-ripple-color="#ffffff" class="btn btn-nonnum"><img src="images/sqrt.jpg" /></span>
+                <div onclick="calcButton('sqrt')" data-ripple-color="#ffffff" class="btn btn-nonnum"><img src="images/sqrt.jpg" /></span>
                 </div>
             </div>
             <div class="">
@@ -51,7 +51,7 @@
                 <div onclick="calcButton(5)" data-ripple-color="#ffffff" class="btn btn-num">5</div>
                 <div onclick="calcButton(2)" data-ripple-color="#ffffff" class="btn btn-num">2</div>
                 <div onclick="calcButton(0)" data-ripple-color="#ffffff" class="btn btn-num">0</div>
-                <div onclick="calcButton('equal')" class="btn btn-nonnum">x<sup>2</sup></div>
+                <div onclick="calcButton('square')" class="btn btn-nonnum">x<sup>2</sup></div>
             </div>
             <div class="">
                 <div onclick="calcButton(9)" data-ripple-color="#ffffff" class="btn btn-num">9</div>
