--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                     <div onclick="calcButton('equal')" data-ripple-color="#ffffff" class="btn btn-nonnum">=</div>
                 </div>
             </div>
-            <div id="bottomButtons" class=""></div>
+            <div id="bottomButtons" class="">
+                <div onclick="notSupported();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">Find all Prime Roots</div>
+                <div onclick="notSupported();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">Calculate </div>
+            </div>
             <div class="well hidden" id="output"></div>
         </div>
         <script src="./Bootstrap Material_files/jquery-1.10.2.min.js"></script>
