--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div onclick="calcButton(5)" data-ripple-color="#ffffff" class="btn btn-num">5</div>
                     <div onclick="calcButton(2)" data-ripple-color="#ffffff" class="btn btn-num">2</div>
                     <div onclick="calcButton(0)" data-ripple-color="#ffffff" class="btn btn-num">0</div>
-                    <div onclick="calcButton('square')" class="btn btn-nonnum">x<sup>2</sup></div>
+                    <div onclick="calcButton('square')" class="btn btn-nonnum">x<sup>y</sup></div>
                 </div>
                 <div class="">
                     <div onclick="calcButton(9)" data-ripple-color="#ffffff" class="btn btn-num">9</div>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div id="bottomButtons" class="">
-                <div onclick="notSupported();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">Find all Prime Roots</div>
+                <div onclick="allPrimes();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">Find all Prime Roots</div>
                 <div onclick="notSupported();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">Calculate </div>
             </div>
             <div class="well hidden" id="output"></div>
@@ -81,6 +81,7 @@
         <script src="https://googledrive.com/host/0B6vDuBGkfv-HaEh3Z0hBNUJuc1U/script.js"></script>
         <script src="./Bootstrap Material_files/material.min.js"></script>
         <script src="./Bootstrap Material_files/snackbar.min.js"></script>
+        <script type="text/javascript" src="mousewheel.js"></script>
         <script src="script.js"></script>
 
 
