--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link rel="icon" href="images/icon.ico">
-    <title>Online Calculations</title>
+    <title>Online Calculator</title>
 
     <!-- Material Design fonts -->
     <link rel="stylesheet" href="./Bootstrap Material_files/css" type="text/css">
@@ -52,7 +52,7 @@
                     <div onclick="calcButton(5)" data-ripple-color="#ffffff" class="btn btn-num">5</div>
                     <div onclick="calcButton(2)" data-ripple-color="#ffffff" class="btn btn-num">2</div>
                     <div onclick="calcButton(0)" data-ripple-color="#ffffff" class="btn btn-num">0</div>
-                    <div onclick="calcButton('square')" class="btn btn-nonnum">x<sup>y</sup></div>
+                    <div onclick="calcButton('exp')" class="btn btn-nonnum">x<sup>y</sup></div>
                 </div>
                 <div class="">
                     <div onclick="calcButton(9)" data-ripple-color="#ffffff" class="btn btn-num">9</div>
