exponents now supported

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                     <div onclick="calcButton('equal')" data-ripple-color="#ffffff" class="btn btn-nonnum">=</div>
                 </div>
             </div>
+            <h3 style="margin-top: 10px;">Additional Calculations</h3>
             <div id="bottomButtons" class="">
                 <div onclick="allPrimes();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">Find all Prime Roots</div>
+                <div onclick="notSupported();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">I will add more things here, I promise</div>
                 <div onclick="notSupported();" data-ripple-color="#000000" class="btn btn-raised btn-small btn-info">I will add more things here, I promise</div>
             </div>
             <div class="well hidden" id="output"></div>
