--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="numbers">
                 <div class="">
-                    <div onclick="calcButton(7)" data-ripple-color="#ffffff" class="btn btn-num">7</div>
+                    <div onclick="calcButton(7)" id="button7" data-ripple-color="#ffffff" data-ripple-duration="5" class="btn btn-num">7</div>
                     <div onclick="calcButton(4)" data-ripple-color="#ffffff" class="btn btn-num">4</div>
                     <div onclick="calcButton(1)" data-ripple-color="#ffffff" class="btn btn-num">1</div>
                     <div onclick="calcButton('period')" data-ripple-color="#ffffff" class="btn btn-nonnum">.</div>
